# ytxt

./: .gitignore  PROJECT_OVERVIEW.md  README.md  plan.md  pyproject.toml  requirements.txt  test_transcript.txt
.github/workflows/: publish.yml
scripts/: bump_version.py
src/: cache.py  cli.py  downloader.py  transcriber.py
src/ytxt/: __init__.py  cli.py  downloader.py  formatter.py  transcriber.py
src/ytxt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ytxt_pkg/: cli.py
