[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytxt"
version = "0.1.0"
authors = [
  { name="Rayan Rane" },
]
description = "Local YouTube transcript CLI"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "yt-dlp",
    "faster-whisper",
    "argparse",
]

[project.scripts]
ytxt = "ytxt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
