[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytxt"
version = "0.1.2"
authors = [
  { name="Rayan Rane" },
]
description = "Local audio and YouTube transcription CLI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp",
    "faster-whisper",
]

[project.urls]
"Homepage" = "https://github.com/rayanrane/ytxt"
"Bug Tracker" = "https://github.com/rayanrane/ytxt/issues"

[project.scripts]
ytxt = "ytxt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
