[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytxt"
version = "0.2.4"
authors = [
  { name="Rayan" },
]
description = "Local audio and YouTube transcription CLI"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp",
    "faster-whisper>=1.0.0,<2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/rayanrane/ytxt"
"Bug Tracker" = "https://github.com/rayanrane/ytxt/issues"

[project.scripts]
ytxt = "ytxt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
